Improving handling dimensions in LinearConstraint (work in progress, unstable version)

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -2228,6 +2228,8 @@ Romain~Soulat implemented in part the merging technique~\cite{AFS13atva}, and br
 Giuseppe~Lipari and Sun~Youcheng provided examples from the real-time systems community, and collaborated on several algorithms.
 Camille~Coti, Sami~Evangelista and Nguy\~{ê}n~Hoàng~Gia worked on the distributed version of \imitator{}.
 Nguy\~{ê}n~Hoàng~Gia worked on the non-Zeno synthesis algorithms.
+%
+Stéphane Rosse improved a script for comparing results and speeds of various versions of \imitator{}.
 
 % TODO: projects
 
@@ -2263,13 +2265,14 @@ The following people contributed to the development of \imitator{}.
 
 \bigskip
 
-The following people contributed to the compiling and packaging facilities.
+The following people contributed to the compiling, testing and packaging facilities.
 
 \begin{tabular}{l l @{ } c @{ } l}
 	Corentin Guillevic & 2015 & & \\
 	Sarah Hadbi & 2015 & & \\
 	Fabrice Kordon & 2015 & & \\
 	Alban Linard & 2014 & -- & 2015 \\
+	Stéphane Rosse & 2016 & -- & 2017 \\
 \end{tabular}
 
 
