--- a/doc/commons.tex
+++ b/doc/commons.tex
@@ -12,6 +12,10 @@
 \usepackage{fourier}
 \usepackage{eulervm}
 
+\usepackage{pdflscape}
+
+% \usepackage{geometry} % to change margins
+
 \usepackage{amsmath,amssymb,amsthm,url}
 \usepackage{amsfonts}
 
