IMITATOR becomes 2.9-alpha Butter Incaberry (doc)

--- a/doc/commons.tex
+++ b/doc/commons.tex
@@ -220,8 +220,8 @@
 
 
 % Current version
-\newcommand{\imitatorversion}{2.8}
-\newcommand{\imitatorversionname}{Butter Ham}
+\newcommand{\imitatorversion}{2.9-alpha}
+\newcommand{\imitatorversionname}{Butter Incaberry}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
