First pre-release of IMITATOR 2.9: version alpha1

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -2314,6 +2314,12 @@ The background erasing was done by Fabrice~Kordon.
 \url{https://commons.wikimedia.org/wiki/File:Schinken-roh.jpg}
 
 
+\paragraph{\imitator{}'s 2.9 version logo} comes from \stylePath{Physalis peruviana.jpg} by Hans B.~commonswiki (assumed?) on Wikimedia Commons
+	(License: public domain).
+
+\url{https://commons.wikimedia.org/wiki/File:Physalis_peruviana.jpg}
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage
