--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -306,15 +306,20 @@
 }
 
 
-@article{bhz08,
-	Author = {R. Bagnara and P. M. Hill and E. Zaffanella},
-	Title = {The {Parma Polyhedra Library}: Toward a Complete Set of Numerical Abstractions for the Analysis and Verification of Hardware and Software Systems},
+@article{BHZ08,
+	Author = {Roberto Bagnara and
+               Patricia M. Hill and
+               Enea Zaffanella},
+	Title = {The {P}arma {P}olyhedra {L}ibrary: Toward a Complete Set of Numerical Abstractions for the Analysis and Verification of Hardware and Software Systems},
 	Journal = {Science of Computer Programming},
 	Volume = 72,
 	Number = {1--2},
 	Pages = {3--21},
 	Year = 2008,
+	ee        = {http://dx.doi.org/10.1016/j.scico.2007.08.001},
 }
+
+
 
 
 
@@ -393,11 +398,13 @@
 
 
  @misc{imitator,
-  	author =	{{IMITATOR Team}},
-  	number =	{v2.7},
-  	title =	{{IMITATOR Web page}},
+	shorthand = {IMI-Web},
+  	author =	{{IMITATOR}},
+  	note =	{\url{http://www.imitator.fr}},
+  	number =	{v2.9},
+  	title =	{{\imitator{} Web page}},
   	url =	{http://www.imitator.fr},
-  	year =	{2015},
+  	year =	{2017},
 }
 
 
