Factor credits in manuals

--- a/doc/IMITATOR-not-developer-manual.tex
+++ b/doc/IMITATOR-not-developer-manual.tex
@@ -119,25 +119,7 @@ This developer manual is available under the Creative Commons CC-BY-SA license.
 
 \bigskip
 
-\subsection*{Graphics Credits}
-	% TODO: nice tabular showing images
-
-\paragraph{\imitator{}'s logo} comes from \stylePath{Typing monkey.svg} by KaterBegemot on Wikimedia Commons
-	(License: Creative Commons Attribution-Share Alike 3.0 Unported).
-
-\url{https://commons.wikimedia.org/wiki/File:Typing_monkey.svg}
-
-
-\paragraph{\imitator{}'s 2.x version logo} comes from \stylePath{Stick\_of\_butter.jpg} by Renee Comet on Wikimedia Commons
-	(License: public domain).
-
-\url{https://commons.wikimedia.org/wiki/File:Stick_of_butter.jpg}
-
-
-\paragraph{\imitator{}'s 2.8 version logo} comes from \stylePath{Schinken-roh.jpg} by Rainer Zenz on Wikimedia Commons
-	(License: Creative Commons Attribution-Share Alike 3.0 Unported).
-
-\url{https://commons.wikimedia.org/wiki/File:Schinken-roh.jpg}
+\input{graphics-credits.tex}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
