Developer manual: class diagram

--- a/doc/IMITATOR-not-developer-manual.tex
+++ b/doc/IMITATOR-not-developer-manual.tex
@@ -79,7 +79,15 @@ In \imitator{}, the variables are numbered as follows in the constraint, startin
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-The class diagram of the algorithm classes is given in the next page.
+We give below the class diagram of the non-distributed algorithms implemented in \imitator{} below.
+Virtual classes are depicted in yellow.
+
+
+\includegraphics[width=\textwidth]{classDiagramSimplified.png}
+
+
+
+The full class diagram of all algorithm classes (included distributed algorithms) is given in the next page.
 
 \newenvironment{changemargin}[2]{%
 \begin{list}{}{%
@@ -95,9 +103,9 @@ The class diagram of the algorithm classes is given in the next page.
 \newpage
 \begin{landscape}
 % \newgeometry{left=3cm,bottom=0.1cm}
-\begin{changemargin}{-2.5cm}{-3cm}
+\begin{changemargin}{-2.cm}{-3cm}
 \thispagestyle{empty}
-\includegraphics[width=2.4\textwidth]{classDiagram.png}
+\includegraphics[width=2.3\textwidth]{classDiagramFull.png}
 \end{changemargin}
 \end{landscape}
 \newpage
