Acknowledge PPL developers in user manual

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -2231,6 +2231,9 @@ Nguy\~{ê}n~Hoàng~Gia worked on the non-Zeno synthesis algorithms.
 %
 Stéphane Rosse improved a script for comparing results and speeds of various versions of \imitator{}.
 
+We acknowledge the help of the PPL~\cite{bhz08} developers for their help with solving several issues over the years, and more generally for making this very useful library available.
+
+
 % TODO: projects
 
 
