--- a/doc/commons.tex
+++ b/doc/commons.tex
@@ -220,7 +220,7 @@
 
 
 % Current version
-\newcommand{\imitatorversion}{2.9-alpha}
+\newcommand{\imitatorversion}{2.9}
 \newcommand{\imitatorversionname}{Butter Incaberry}
 
 
