Add April 1st new feature: a -romeo mode; version now 2.9.1

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -1401,6 +1401,13 @@ Note that node positioning is not (much) supported, so may want to edit manually
 	% TODO refer to the graphics of the coffee machine
 
 %------------------------------------------------------------
+\paragraph{\styleOption{-romeo} (default: false)}
+%------------------------------------------------------------
+April 1st, 2017 feature :-)
+Supposedly calls the Romeo model checker~\cite{LRST09} instead of \imitator{}.
+Just try!
+
+%------------------------------------------------------------
 \paragraph{\styleOption{-states-limit} (default: none)}
 %------------------------------------------------------------
 Will try to stop after reaching this number of states.
