--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -446,6 +446,25 @@
 
 
 
+@inproceedings{LRST09,
+	ADDRESS = {York, United Kingdom},
+  author    = {Didier Lime and
+               Olivier H. Roux and
+               Charlotte Seidner and
+               Louis-Marie Traonouez},
+	EDITOR = {Stefan Kowalewski and Anna Philippou},
+	booktitle = {15th International Conference on Tools and Algorithms for the Construction and Analysis of Systems (TACAS 2009)},
+	MONTH = MAR,
+	PUBLISHER = {Springer},
+	SERIES = {LNCS},
+	VOLUME = {5505},
+	PAGES = {54-57},
+	TITLE = {Romeo: A Parametric Model-Checker for {Petri} Nets with Stopwatches},
+	YEAR = 2009,
+}
+
+
+
 @inproceedings{Markey11,
   	address =	{V{\"a}ster{\aa}s, Sweden},
   	author =	{Markey, Nicolas},
