--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -129,7 +129,7 @@ This model contains two clocks: \styleIMI{x1} is process~1's clock, and \styleIM
 
 This model contains two parameters: \styleIMI{delta} is the parametric duration specifying how long a process is idle at most, whereas \styleIMI{gamma} is the parametric duration specifying the minimum duration between the time a process checks for the availability of the critical section and the time the same process indeed enters the critical section (if it is still available).
 
-Two discrete variables (\ie{} global, integer-valued variables, see \cref{section:discrete}) are used:
+Two discrete variables (\ie{} global, rational-valued variables, see \cref{section:discrete}) are used:
 	\styleIMI{turn} checks which process is attempting to enter the critical section;
 	\styleIMI{counter} records how many processes are in the critical section (this variable will not be used for the verification, but was used in the original \pat{} model, and we choose to keep it).
 	% TODO: use it for verification once IMITATOR supports global variables in properties
@@ -247,7 +247,7 @@ This chapter formally introduces the input model of \imitator{}.
 
 An \imitator{} parametric timed automaton (hereafter \IPTA{}) is a variant of parametric automata (as introduced in~\cite{AHV93}).
 A first difference between \IPTA{} and the PTA of \cite{AHV93} is that \IPTA{} have no accepting / final location;
-furthermore, \IPTA{} augment the expressiveness of PTA with several features such as invariants, discrete (integer) variables, complex guards and invariants (\ie{} not only comparing a single clock to a single parameter), stopwatches (\ie{} the ability to stop some clocks in some locations), and arbitrary clock updates (\ie{} not necessarily to~0).
+furthermore, \IPTA{} augment the expressiveness of PTA with several features such as invariants, discrete (rational) variables, complex guards and invariants (\ie{} not only comparing a single clock to a single parameter), stopwatches (\ie{} the ability to stop some clocks in some locations), and arbitrary clock updates (\ie{} not necessarily to~0).
 
 
 %-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-
@@ -266,7 +266,7 @@ A set of parameters is $\Param = \{ \param_1, \dots, \param_\ParamCard \} $;
 a parameter valuation is a function $\pval\colon \Param \rightarrow \grandr$.
 We will often identify a valuation~$\pval$ with the \emph{point} $(\pval(\param_1), \dots, \pval(\param_{\ParamCard}))$.
 
-\emph{Discrete variables} are integer-valued variables.
+\emph{Discrete variables} are rational-valued variables.
 A set of discrete variables is $\DVar = \{ \dvar_1, \dots, \dvar_\DVarCard \} $;
 a discrete variable valuation is a function $\dval \colon \DVar \rightarrow \grandn$.
 
@@ -316,7 +316,7 @@ Let $\unobs$ denote the unobservable action.
 		\item $\Action$ is a finite set of actions;
 		\item $\Loc$ is a finite set of locations;
 		\item $\locinit \in \Loc$ is the initial location;
-		\item $\DVar$ is a set of integer-valued variables;
+		\item $\DVar$ is a set of rational-valued variables;
 		\item $\Clock$ is a set of clocks;
 		\item $\Param$ is a set of parameters;
 		\item $\invariant : \Loc \rightarrow \LConstraintXPD$ assigns to every location~$\loc$ a constraint over all variables, called the \emph{invariant} of~$\loc$;
@@ -400,11 +400,11 @@ Finally, note that the number of \IPTA{}, locations, variables and actions that 
 Discrete variables\footnote{%
 	The name ``discrete variable'' comes from \hytech{}.
 }
-are global integer-valued variables.
+are global rational-valued variables.
 Their value is global, in the sense that they are shared by all \IPTA{} of the model.
 They can be seen as syntactic sugar to represent a possibly unbounded number of locations.
 
-In \imitator{}, integers are exact and unbounded, just as in maths (\ie{} they are \emph{not} represented using a limited number of bits, such as 32 or 64 bits).
+In \imitator{}, rationals are exact and unbounded, just as in maths (\ie{} they are \emph{not} represented using a limited number of bits, such as 32 or 64 bits).
 Hence, no overflow can occur, and the representation of the constraints is always exact.
 Note that floating-point numbers are totally absent from the \imitator{} implementation (except for the generation of graphical outputs).
 
@@ -433,7 +433,7 @@ That is, we can define initial constraints such as:
 \end{center}
 % TODO: style for sample piece of file
 
-However, discrete variables must be initialized to a \emph{constant integer}.
+However, discrete variables must be initialized to a \emph{constant rational}.
 Given a discrete variable \styleIMI{i}, if the definition of the initial state does not contain an equality of the form \styleIMI{i = ...} followed by a linear term in $\LTermXPD$, then \imitator{} will assume that \styleIMI{i} is initially set to~0, and will issue a warning.
 
 
@@ -466,7 +466,9 @@ The syntax is the following one:
 	\end{center}
 Then, any occurrence of \styleIMI{c} in the model is replaced with \styleIMI{1}.
 
-Constants are (unbounded, exact) integers.
+Constants are (unbounded, exact) rationals.
+
+Limited linear expressions over rationals can be used in the definition of a constant; however no other constant can be used in a definition, \ie{} one cannot (yet) write \styleIMI{c1 = c2 + 1: constant;}.
 
 
 % TODO : 'hint' box
@@ -984,10 +986,10 @@ However, \imitator{} does not perform what is referred to as \emph{symbolic mode
 In short, a symbolic state in \imitator{} is made of the following elements:
 \begin{itemize}
 	\item the current location (index) of each \IPTA{};
-	\item the current value of the (integer-valued) discrete variables;
+	\item the current value of the (rational-valued) discrete variables;
 	\item a constraint on $\Clock \cup \Param \cup \DVar$ representing the continuous information.
 \end{itemize}
-In \imitator{}, all integers (\ie{} the value of the discrete variables and the coefficients used in the constraints) are unbounded integers (implemented using GMP).
+In \imitator{}, all rationals (\ie{} the value of the discrete variables and the coefficients used in the constraints) are unbounded rationals (implemented using GMP).
 
 
 
@@ -2191,7 +2193,7 @@ This can be easily simulated using dedicated discrete variables, that would be r
 \section{Initial intervals for discrete variables}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Discrete variables must be set to a constant integer in the \styleIMI{init} definition (\eg{} \styleIMI{i = 0}).
+Discrete variables must be set to a constant rational in the \styleIMI{init} definition (\eg{} \styleIMI{i = 0}).
 Setting a variable to an arbitrarily value (\eg{} \styleIMI{i in [0 .. 10]}) is currently not supported.
 This can be simulated using an initialization \IPTA{} that nondeterministically sets \styleIMI{i} to any of the values, in 0 time so as to not disturb the model.
 	% TODO: example
