Add optional conversion of the exact value of the discrete variables into (approximated) floats

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -1298,6 +1298,11 @@ Set minimum value for the $y$ axis when plotting the cartography (not entirely f
 Set maximum value for the $y$ axis when plotting the cartography (not entirely functional in all situations yet).
 
 
+%------------------------------------------------------------
+\paragraph{\styleOption{-output-float} (default: false)}
+%------------------------------------------------------------
+Convert (exact-valued) discrete variables into (possibly approximated) floats in all outputs.
+
 
 %------------------------------------------------------------
 \paragraph{\styleOption{-output-graphics-source} (default: false)}
